--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -297,6 +297,7 @@ h1, h2, h3, h4, h5
         display: flex
         flex-direction: column
         align-items: flex-end
+        margin-bottom: -3px
         &-link
             font-family: "Oswald"
             font-size: 26px
@@ -410,7 +411,7 @@ h1, h2, h3, h4, h5
         z-index: -1
     &__body
         padding-top: 180px
-        padding-bottom: 430px
+        padding-bottom: 350px
         max-width: 950px
         position: relative
         z-index: 3
@@ -494,7 +495,7 @@ h1, h2, h3, h4, h5
         top: 50%
         z-index: -1
         transform: translate(-50%, -42%)
-        background-color: #f1f1f1d3
+        background-color: #f1f1f160
         border-radius: 3px
 
 .about
@@ -758,12 +759,12 @@ h1, h2, h3, h4, h5
         flex-direction: column
         align-items: flex-end
     &__title, &__title *
-        @include adaptiv-font(32, 26)
+        font-size: 32px
         text-transform: uppercase
         font-family: "Oswald"
         text-align: right
         font-weight: normal
-        line-height: 45px
+        line-height: 50px
         max-width: 690px
         &, & *
             letter-spacing: normal
@@ -843,9 +844,6 @@ h1, h2, h3, h4, h5
         right: -40px
     &__table
         padding-top: 90px
-        // min-width: 1200px
-        &-wrap
-            // overflow-x: auto
         &_hidden
             display: none
             &.active
@@ -912,7 +910,7 @@ h1, h2, h3, h4, h5
                 text-align: center
                 font-size: 24px
                 line-height: 32px
-                font-weight: 700
+                font-weight: 500
                 color: #fff
                 margin-top: 25px
         & + &
@@ -923,6 +921,7 @@ h1, h2, h3, h4, h5
         justify-content: space-between
         max-width: 94%
         .projects__open
+            margin-top: 0
             font-size: 18px
             font-weight: 400
             color: #333
@@ -1022,6 +1021,15 @@ h1, h2, h3, h4, h5
         left: 0
         width: 100%
         z-index: -1
+        &-m
+            top: 0
+            height: 100%
+            position: absolute
+            left: 0
+            object-fit: cover
+            display: none
+            width: 100%
+            z-index: -1
     .section__title
         max-width: 630px
         &, & *
@@ -1127,7 +1135,10 @@ h1, h2, h3, h4, h5
         & + &
             margin-left: 20px
     &__icon
-        max-width: 65px
+        max-width: 70px
+        height: 70px
+        width: 100%
+        object-fit: contain
     &__title
         display: block
         font-weight: 700
@@ -1721,12 +1732,12 @@ h1, h2, h3, h4, h5
             letter-spacing: normal
             line-height: 44px
     &__more
-        margin-top: 70px
         display: flex
         justify-content: center
         align-items: center
     &__open
         font-size: 26px
+        margin-top: 70px
         text-transform: uppercase
         font-family: "Oswald"
         color: #d4d1d1
@@ -1773,9 +1784,11 @@ h1, h2, h3, h4, h5
         display: grid
         grid-column-gap: 40px
         grid-row-gap: 50px
-        margin-top: 90px
+        padding-top: 90px
         align-items: end
         grid-template-columns: repeat(2, 1fr)
+        &:first-child
+            padding-top: 60px
         &_hidden
             display: none
             &.active
@@ -1807,7 +1820,7 @@ h1, h2, h3, h4, h5
         position: absolute
         bottom: 0
         left: 0
-        width: 100%
+        width: 110%
         z-index: -1
     &__body
         max-width: 670px
@@ -1910,9 +1923,9 @@ h1, h2, h3, h4, h5
             font-size: 16px
             font-weight: 700
             left: 0
-            top: 15px
+            top: -5px
             text-align: center
-            line-height: 30px
+            line-height: 35px
             border-radius: 50%
             transform: translate(0, -130%)
     &__text
