--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -183,6 +183,7 @@
             display: none !important
 
     .house
+        margin-top: 60px
         & + &
             margin-top: 70px
         &::before
