--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -1434,11 +1434,13 @@ h1, h2, h3, h4, h5
 
 .house
     position: relative
+    margin-top: 170px
     & + &
-        margin-top: 190px
+        margin-top: 150px
     &::before
         position: absolute
         left: 0
+        top: -20px
         transform: translateY(-80%)
         display: block
         padding: 20px
@@ -1669,6 +1671,10 @@ h1, h2, h3, h4, h5
         flex-direction: column
         align-items: flex-start
         margin-top: 50px
+        &_text
+            max-width: 350px
+            align-items: center
+            width: 100%
         input[type="text"]
             font-size: 16px
             padding: 15px 30px
