--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -125,6 +125,11 @@
             margin: 0 auto
             display: block
     
+    .house
+        &__card.ml
+            padding: 20px 40px
+            margin-left: 65px
+
     .advantage
         margin-right: 0 !important
 
@@ -220,6 +225,7 @@
                 margin-top: 0
             &.ml
                 margin-left: 0
+                padding: 20px
 
 @media screen and ( max-width: 1000px )
     .error__container .swiper-wrapper
@@ -563,7 +569,7 @@
                 justify-content: center
             &__contacts
                 display: none
-
+ 
 @media screen and ( min-width: 781px )
     .error
         &__container
@@ -775,8 +781,6 @@
             display: none
 
     .projects
-        .section__title
-            text-align: left
         &__container
             grid-template-columns: 1fr
             justify-items: center
@@ -877,6 +881,10 @@
         &__options
             margin-top: 35px
     
+    .projects
+        .section__title
+            text-align: left
+
     .count
         &__book
             width: 90%
@@ -1001,7 +1009,7 @@
     .button
         &_notype
             font-size: 16px
-            padding: 20px 25px
+            padding: 20px 65px
 
     .portfolio
         margin-top: 90px
