--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -651,8 +651,10 @@
 
     .banner
         margin-bottom: 0px
-        background-position: 20% 20px
+        background-position: 54% 20px
         background-size: auto 90%
+        &__mobile-cloud
+            bottom: -250px
         .section
             &__title
                 &, & *
@@ -678,6 +680,11 @@
             justify-items: center
         &__item
             margin: 20px 0px
+            &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5)
+                .why
+                    &__img
+                        img
+                            margin-bottom: 10px
 
     .examples
         padding-top: 0
@@ -1009,7 +1016,7 @@
     .button
         &_notype
             font-size: 16px
-            padding: 20px 65px
+            padding: 20px 35px
 
     .portfolio
         margin-top: 90px
