--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -409,6 +409,7 @@ h1, h2, h3, h4, h5
         left: 50%
         transform: translateX(-50%)
         z-index: -1
+        opacity: 0.9
     &__body
         padding-top: 180px
         padding-bottom: 350px
@@ -709,6 +710,11 @@ h1, h2, h3, h4, h5
         display: flex
         flex-direction: column
         object-fit: contain
+        &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5)
+            .why
+                &__img
+                    img
+                        margin-bottom: 20px
         &:nth-child(3n)
             padding-left: 50px
     &__img
