--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -1,3 +1,19 @@
+@media screen and ( max-width: 1720px )
+    .count
+        &__niples
+            max-width: 300px
+
+    .compare
+        &__tree
+            &_1
+                left: -40px
+                max-width: 220px
+                width: 100%
+            &_2
+                right: -80px
+                max-width: 280px
+                width: 100%
+    
 @media screen and ( max-width: 1700px )
     .error
         &__bg
@@ -10,7 +26,15 @@
         &__tree
             display: none
 
+    .banner
+        &__tree
+            max-width: 220px
+            left: -40px
+            width: 100%
+
     .about
+        &__glass
+            left: -100px
         &__desk
             top: 500px
     
@@ -26,7 +50,22 @@
         &__tree
             display: none
 
+    .about
+        &__saw
+            right: -120px
+
     .count
+        &__wood
+            &_1
+                right: -40px
+                width: 100%
+                max-width: 440px
+            &_2
+                left: -30px
+                max-width: 300px
+                width: 100%
+        &__circle
+            display: none
         &__book
             left: 20px
             width: 70%
@@ -35,25 +74,20 @@
     
 @media screen and ( max-width: 1400px )
     .about
+        &__glass
+            left: -150px
         &__bg
             &_1
-                display: none
+                width: 120%
+    
+    .compare
+        &__tree
+            &_1
+                left: -60px
             &_2
-                top: 100px
-                display: block
-        &__container
-            margin-top: 360px
-        &__desk
-            display: none
-        &__oleg
-            left: 80%
-            display: block
-            &-name
-                bottom: 160px
-                right: 0
-            &-text
-                bottom: 121px
-                right: 10px
+                top: 150px
+                right: -100px
+                max-width: 230px
 
     .error
         &__bg
@@ -63,7 +97,7 @@
 @media screen and ( max-width: 1300px )
     .compare
         &__hummer
-            display: none
+            left: -150px
         &__tree
             &_1, &_2
                 display: none
@@ -115,6 +149,27 @@
         &__tree
             display: none
 
+@media screen and ( max-width: 1180px )
+    .about
+        &__container
+            margin: 360px auto 0px
+        &__desk
+            display: none
+        &__oleg
+            left: 80%
+            display: block
+            &-name
+                bottom: 160px
+                right: 0
+            &-text
+                bottom: 121px
+                right: 10px
+        &__bg
+            &_1
+                display: none
+            &_2
+                display: block
+
 @media screen and ( max-width: 1160px )
     .notype
         &__bg
@@ -141,6 +196,10 @@
 @media screen and ( max-width: 1050px )
     .correct
         padding-bottom: 50px
+
+    .compare
+        &__hummer
+            display: none
 
     .advantages
         &__container
@@ -210,7 +269,7 @@
                 margin-bottom: 0
                 margin-left: 40px
         &__img
-            display: none
+            // display: none
         &__card
             margin-bottom: 20px
             max-height: none
@@ -298,8 +357,6 @@
         margin-top: 90px
         &__container
             margin-bottom: 10px
-            .swiper-slide
-                min-height: 300px
 
     .banner
         background-position: 30% -10px
@@ -517,6 +574,11 @@
             &, & *
                 line-height: 35px
 
+    .portfolio
+        margin-top: 90px
+        &__container
+            grid-template-columns: repeat(2, 1fr)
+
     .reports
         &__bg
             right: -370px
@@ -652,7 +714,7 @@
     .banner
         margin-bottom: 0px
         background-position: 54% 20px
-        background-size: auto 90%
+        background-size: auto 100%
         &__mobile-cloud
             bottom: -250px
         .section
@@ -881,6 +943,13 @@
         .section__title
             text-align: left
 
+    .portfolio
+        &__container
+            grid-template-columns: 1fr
+            &:not(.active)
+                & .portfolio__item:nth-child(n+6)
+                    display: none
+
 @media screen and ( max-width: 500px )
     .quiz
         &__subtext
@@ -1020,9 +1089,6 @@
 
     .portfolio
         margin-top: 90px
-        &__container
-            .swiper-slide
-                min-height: 250px
 
     .benefits
         &__bg
