--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -37,7 +37,19 @@
             left: -100px
         &__desk
             top: 500px
-    
+
+@media screen and ( max-width: 1580px )
+
+    .correct
+        &__leaf
+            left: -50px
+            max-width: 300px
+
+    .about
+        &__desk
+            top: 400px
+            right: 100px
+
 @media screen and ( max-width: 1500px )
     .compare
         &__tree
@@ -74,6 +86,9 @@
     
 @media screen and ( max-width: 1400px )
     .about
+        &__desk
+            top: 450px
+            right: 100px
         &__glass
             left: -150px
         &__bg
@@ -195,6 +210,8 @@
 
 @media screen and ( max-width: 1050px )
     .correct
+        &__leaf
+            display: none
         padding-bottom: 50px
 
     .compare
