--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -24,6 +24,8 @@ $maxWidth: 1920
 
 body, html
     overflow-x: hidden
+    transition-delay: 0
+    transition-duration: 0
 
 body
     display: flex
@@ -39,6 +41,11 @@ h1, h2, h3, h4, h5
         font-weight: 400
         letter-spacing: 1.22px
         font-family: "Oswald", sans-serif
+
+.fixed
+    overflow: hidden
+    transition-delay: 0
+    transition-duration: 0
 
 .container
     margin: 0 auto
@@ -2098,6 +2105,7 @@ h1, h2, h3, h4, h5
         img
             width: 100%
             user-select: none
+            
 .footer
     padding-bottom: 65px
     flex-grow: 0
