--- a/intel/sass/style.sass
+++ b/intel/sass/style.sass
@@ -1,6 +1,8 @@
 $text_blue: #3a66b1
 $text_light: #c8d5ec
 $light_blue: #70c7fc
+$hover_red: #c81326
+$hover_blue: #004a86
     
 *, *::before, *::after
     box-sizing: border-box
@@ -54,6 +56,7 @@ section
     text-align: center
     user-select: none
     overflow: hidden
+    flex-shrink: 0
     color: #ffffff
     font-weight: 400
     text-transform: uppercase
@@ -73,6 +76,11 @@ section
         transform: rotate(45deg) translate(-50%, -50%)
     &::after
         transform: rotate(-45deg) translate(-35%, -50%)
+    &:hover
+        color: #ffffff
+        background-color: $hover_blue
+        &::before, &::after
+            background-color: #ffffff
     &_navy
         background-color: $text_blue
         padding: 5px 50px 5px 30px
@@ -99,6 +107,8 @@ section
     grid-template-columns: repeat(3, 1fr)
     grid-column-gap: 60px
     width: 100%
+    position: relative
+    z-index: 2
 
 .deco
     display: flex
@@ -134,6 +144,7 @@ section
     flex-grow: 0
     background-color: #ffffff
     position: relative
+    z-index: 10
     &__intel
         background-color: $text_blue
         padding: 10px
@@ -169,6 +180,74 @@ section
         font-weight: 500
         line-height: 28px
         color: $text_blue
+        &:hover
+            color: $hover_red
+
+.burger
+    display: none
+    height: 40px
+    width: 40px
+    background-color: transparent
+    position: relative
+    border-radius: 0px
+    appearance: none
+    cursor: pointer
+    &:focus
+        outline: none
+    &::before, &::after, span
+        background-color: $text_blue
+        height: 2px
+        position: absolute
+        display: inline-block
+        left: 5px
+        transform: translate(0, -50%)
+        transition: top .25s ease-in-out .4s, transform .25s ease-in-out 0s, opacity 0s ease-in-out .25s, left .1s ease-in-out .25s
+    &::before, &::after
+        content: ''
+    &::before
+        width: 25px
+        top: 11px
+        transform-origin: right
+    span
+        width: 20px
+        top: 50%
+        transform-origin: left
+    &::after
+        width: 15px
+        top: 30px
+    &.active
+        &::before, &::after, span
+            transition: top .25s ease-in-out 0s, transform .25s ease-in-out .3s, opacity 0s ease-in-out .3s, left .25s ease-in-out .25s
+            top: 10px
+        &::before
+            transform: translate(0, -50%) rotate(-45deg)
+        span
+            transform: translate(0, -50%) rotate(45deg)
+            left: 13px
+        &::after
+            opacity: 0
+
+.mobile
+    position: fixed
+    background-color: #fff
+    z-index: 9
+    top: 0
+    right: 0
+    width: 40vw
+    height: 100vh
+    transform: translateX(100%)
+    padding: 80px 10px 10px
+    &.active
+        transform: translateX(0%)
+    .nav
+        &__list
+            flex-direction: column
+        &__link
+            padding: 5px
+        &__item
+            display: inline-block
+        .nav__item + .nav__item
+            margin-top: 8px
 
 .banner
     padding: 55px 0px 180px
@@ -199,6 +278,7 @@ section
         width: 100%
         max-width: 840px
         position: relative
+        z-index: 3
         &::after
             content: ''
             display: block
@@ -227,8 +307,7 @@ section
     background-color: #f0f0f0
     &__img
         width: 100%
-        max-height: 205px
-        height: 100%
+        height: 205px
         img
             width: 100%
             max-height: 100%
@@ -240,10 +319,13 @@ section
     &__link
         font-size: 21px
         line-height: 30px
-        
         font-weight: 500
         position: relative
         color: $text_blue
+        &:hover
+            color: $hover_red
+            &::before, &::after
+                background-color: $hover_red
         &::before, &::after
             content: ''
             display: inline-block
@@ -271,19 +353,17 @@ section
         font-weight: 500
         position: relative
         color: $text_blue
-        &::before, &::after
-            content: ''
-            display: inline-block
-            position: absolute
-            top: 55%
-            right: -40px
-            height: 4px
-            width: 20px
-            background-color: $text_blue
-        &::before
-            transform: rotate(45deg) translate(-50%, -50%)
-        &::after
-            transform: rotate(-45deg) translate(-35%, -50%)
+        display: inline-block
+        text-align: center
+        &:hover
+            color: $hover_red
+            svg
+                stroke: $hover_red
+        svg
+            transition-delay: 0s
+            transition-duration: 0s
+            height: 24px
+            stroke: $text_blue
     &__wrap
         display: grid
         grid-template-columns: repeat(2, 1fr)
@@ -314,12 +394,14 @@ section
         
     &__list
         margin-top: 30px
-        &-item
+        &-item, &-item a
             color: $text_blue
             font-size: 18px
             line-height: 33px
-            
             list-style-position: inside
+        &-item a
+            &:hover
+                color: $hover_red
     &__line
         width: 100%
         height: 1px
@@ -372,8 +454,7 @@ section
     background-color: #f0f0f0
     &__img
         width: 100%
-        max-height: 205px
-        height: 100%
+        height: 205px
         img
             width: 100%
             max-height: 100%
@@ -382,21 +463,28 @@ section
     &__body
         padding: 37px 60px
         flex-grow: 1
-    &__link
+    &__title
         font-weight: 500
         font-size: 21px
         line-height: 30px
-        
         color: $text_blue
     &__text
         margin-top: 20px
         font-weight: 400
         font-size: 18px
         line-height: 30px
+        color: $text_blue
+    &:hover
+        .article
+            &__title, &__text
+                color: $hover_red
         
 .small
     padding: 62px 0px
     overflow: hidden
+    .section__title
+        &, & *
+            text-align: center
     &__bg
         left: 0
         top: -350px
@@ -409,19 +497,17 @@ section
             object-position: center
     &__link
         position: relative
-        &::before, &::after
-            content: ''
-            display: inline-block
-            position: absolute
-            top: 55%
-            right: -40px
-            height: 4px
-            width: 20px
-            background-color: #fff
-        &::before
-            transform: rotate(45deg) translate(-50%, -50%)
-        &::after
-            transform: rotate(-45deg) translate(-35%, -50%)
+        svg
+            transition-delay: 0s
+            transition-duration: 0s
+            height: 24px
+            stroke: #fff
+        &:hover
+            color: $hover_red !important
+            svg
+                transition-delay: 0s
+                transition-duration: 0s
+                stroke: $hover_red
 
 .products
     background-color: #fff
@@ -476,6 +562,8 @@ section
         grid-template-columns: repeat(2, 1fr)
         grid-column-gap: 120px
         grid-row-gap: 60px
+        position: relative
+        z-index: 3
     &__item
         overflow: hidden
         display: flex
@@ -507,7 +595,7 @@ section
         font-weight: 500
         font-size: 36px
         line-height: 55px
-        letter-spacing: 30%
+        letter-spacing: 1.3px
     &__text
         font-size: 18px
         font-weight: 400
