--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -1821,8 +1821,9 @@ h1, h2, h3, h4, h5
     &__oleg
         display: none
         max-width: 400px
-        margin: 0 auto
-        transform: translateY(40px)
+        max-height: 600px
+        margin: 0 auto 10px
+        width: auto
     &__bg
         position: absolute
         bottom: 0
