--- a/intel/sass/style.sass
+++ b/intel/sass/style.sass
@@ -90,7 +90,7 @@ section
     &_product
         color: #000
         background-color: #f3d54e
-        padding: 5px 60px 5px 50px
+        padding: 5px 62px 5px 53px
         &::before, &::after
             right: 40px
             background-color: #000
@@ -493,12 +493,13 @@ section
             text-align: center
     &__bg
         left: 0
-        top: -350px
+        top: 0
         position: absolute
         width: 100%
         height: 100%
         img
             width: 100%
+            height: 100%
             object-fit: cover
             object-position: center
     &__link
