--- a/intel/sass/style.sass
+++ b/intel/sass/style.sass
@@ -32,7 +32,7 @@ section
         font-weight: bold !important
     &_white
         color: #fff !important
-
+ 
 .section
     &__title
         &, & *
@@ -45,6 +45,14 @@ section
         width: 100%
         align-items: center
         justify-content: center
+    &__hidden
+        display: none
+        opacity: 0
+        visibility: hidden
+        height: 0px
+        overflow: hidden
+        font-size: 0px
+        line-height: 0px
 
 .button
     position: relative
