--- a/intel/sass/style.sass
+++ b/intel/sass/style.sass
@@ -1,6 +1,6 @@
-$text_blue: #3a66b1
-$text_light: #c8d5ec
-$light_blue: #70c7fc
+$text_blue: #0066ba
+$text_light: #c3d6f4
+$light_blue: #01c8ff
 $hover_red: #c81326
 $hover_blue: #004a86
     
@@ -97,7 +97,7 @@ section
         padding: 5px 50px 5px 30px
     &_product
         color: #000
-        background-color: #f3d54e
+        background-color: #ffd823
         padding: 5px 62px 5px 53px
         &::before, &::after
             right: 40px
@@ -358,7 +358,7 @@ section
     background-repeat: no-repeat
     .deco
         top: 0
-        left: 1435px
+        left: 1443px
         transform: translateY(-45px)
     &__title
         font-weight: 500
@@ -454,7 +454,7 @@ section
     padding-bottom: 90px
     .deco
         bottom: -105px
-        left: 1375px
+        left: 1383px
     .three-col__container
         margin-bottom: 15px
     .button
